// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproPatientBanner > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="
    amelipro-patient-banner
    bg-ap-white
    d-flex
    justify-center
    pa-8
    w-100
  "
  id="modified-unique-id-container"
  style="position: relative;"
>
  <div
    class="amelipro-patient-banner__content"
    id="modified-unique-id-wrapper"
    style="width: 100%;"
  >
    <div class="
      align-center
      d-flex
      justify-space-between
    ">
      <div
        class="
          align-center
          amelipro-patient-banner__patient-infos
          d-inline-flex
          flex-wrap
        "
        id="modified-unique-id-patient-infos"
      >
        <p
          class="
            amelipro-patient-banner__patient-info__name
            mb-4
            mb-md-0
            text-h5
          "
          id="modified-unique-id-identity"
        >
          <span class="
            d-block
            d-sm-inline
            font-weight-semibold
            text-h3
          ">
            Modified name
          </span>
          né(e)
          <span>
            Modified birth name
          </span>
          le Modified birthdate
        </p>
        <!-- v-if -->
      </div>
      <p
        class="
          amelipro-patient-banner__patient-info__doctor
          mb-0
          text-ap-blue-darken-1
          text-h5
        "
        id="modified-unique-id-patient-doctor-infos"
      >
        Modified doctor infos
      </p>
    </div>
    <hr class="patient-banner__separator" />
    <div
      class="
        align-center
        d-flex
        patient-banner-main
      "
      id="modified-unique-id-main-content"
    >
      <div class="
        d-flex
        flex-column
        flex-sm-row
      ">
        <div class="mr-16">
          <p
            class="
              font-weight-regular
              mb-4
              text-h5
            "
            id="modified-unique-id-patient-status"
          >
            Statut :
            <span class="font-weight-semibold">
              Modified status
            </span>
          </p>
          <p
            class="
              font-weight-regular
              mb-4
              mb-md-0
              text-h5
            "
            id="modified-unique-id-patient-number"
          >
            NIR :
            <span class="font-weight-semibold">
              Modified XXXXXXXXX
            </span>
          </p>
        </div>
        <div class="mr-3">
          <p
            class="
              mb-4
              text-h5
            "
            id="modified-unique-id-patient-system"
          >
            Modified system
          </p>
          <p
            class="
              mb-4
              mb-md-0
              text-h5
            "
            id="modified-unique-id-patient-organism"
          >
            Modified organism
          </p>
        </div>
      </div>
      <!-- v-if -->
    </div>
  </div>
</div>
`;

exports[`AmeliproPatientBanner > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class="
    amelipro-patient-banner
    bg-ap-white
    d-flex
    justify-center
    pa-8
    w-100
  "
  style="position: relative;"
>
  <div
    class="amelipro-patient-banner__content"
    style="width: 100%;"
  >
    <div class="
      align-center
      d-flex
      justify-space-between
    ">
      <div class="
        align-center
        amelipro-patient-banner__patient-infos
        d-inline-flex
        flex-wrap
      ">
        <p class="
          amelipro-patient-banner__patient-info__name
          mb-4
          mb-md-0
          text-h5
        ">
          <span class="
            d-block
            d-sm-inline
            font-weight-semibold
            text-h3
          "></span>
          né(e)
          <!-- v-if -->
          le
        </p>
        <amelipro-btn-stub
          badge="false"
          badgebgcolor="ap-pink"
          badgecolor="ap-white"
          bordered="false"
          class="
            amelipro-patient-banner__patient-change__btn
            mb-4
            mb-md-0
            mx-4
            text-h5
            text-none
          "
          color="ap-blue-darken-1"
          disabled="false"
          hovercolor="ap-blue-darken-2"
          hoverunderline="true"
          iconbgcolor="transparent"
          iconbordered="false"
          iconleft="false"
          infoblock="false"
          minheight="3rem"
          size="60px"
          text="true"
          textcolor="ap-white"
          type="button"
          underline="false"
        ></amelipro-btn-stub>
      </div>
      <p class="
        amelipro-patient-banner__patient-info__doctor
        mb-0
        text-ap-blue-darken-1
        text-h5
      "></p>
    </div>
    <hr class="patient-banner__separator" />
    <div class="
      align-center
      d-flex
      justify-space-between
      patient-banner-main
    ">
      <div class="
        d-flex
        flex-column
        flex-sm-row
      ">
        <div class="mr-16">
          <p class="
            font-weight-regular
            mb-4
            text-h5
          ">
            Statut :
            <span class="font-weight-semibold"></span>
          </p>
          <p class="
            font-weight-regular
            mb-4
            mb-md-0
            text-h5
          ">
            NIR :
            <span class="font-weight-semibold"></span>
          </p>
        </div>
        <div class="mr-3">
          <p class="
            mb-4
            text-h5
          "></p>
          <p class="
            mb-4
            mb-md-0
            text-h5
          "></p>
        </div>
      </div>
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="true"
        color="ap-white"
        disabled="false"
        hovercolor="ap-blue-lighten-3"
        hoverunderline="false"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="3rem"
        size="60px"
        text="false"
        textcolor="ap-blue-darken-1"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
    </div>
  </div>
</div>
`;

exports[`AmeliproPatientBanner > render correctly 1`] = `
<div
  class="
    amelipro-patient-banner
    bg-ap-white
    d-flex
    justify-center
    px-8
    py-4
    w-100
  "
  id="my-patient-banner-id-container"
  style="position: relative;"
>
  <div
    class="amelipro-patient-banner__content"
    id="my-patient-banner-id-wrapper"
    style="width: 100%;"
  >
    <div class="
      align-center
      d-flex
      justify-space-between
    ">
      <div
        class="
          align-center
          amelipro-patient-banner__patient-infos
          d-inline-flex
          flex-wrap
        "
        id="my-patient-banner-id-patient-infos"
      >
        <p
          class="
            amelipro-patient-banner__patient-info__name
            mb-4
            mb-md-0
          "
          id="my-patient-banner-id-identity"
        >
          <span class="
            d-block
            d-sm-inline
            font-weight-bold
            text-h3
          ">
            Jeanne
          </span>
          né(e)
          <span>
            Dupont
          </span>
          le 09/11/1992
        </p>
        <button
          class="
            amelipro-btn
            amelipro-patient-banner__patient-change__btn
            amelipro-patient-banner__patient-change__btn
            elevation-0
            mb-4
            mb-4
            mb-md-0
            mb-md-0
            mx-4
            mx-4
            text-ap-blue-darken-1
            text-none
            text-none
            v-btn
            v-btn--density-default
            v-btn--flat
            v-btn--size-default
            v-btn--variant-text
            v-theme--light
          "
          id="my-patient-banner-id-patient-change-btn"
          style="height: auto; min-height: auto; padding: 0px;"
          type="button"
        >
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span
            class="v-btn__content"
            data-no-activator=""
          >
            <span class="
              align-center
              amelipro-custom-btn
              d-flex
              flex-row
            ">
              Changer de patient
              <span
                class="
                  amelipro-btn__icon--right
                  amelipro-icon
                  d-block
                "
                id="my-patient-banner-id-patient-change-btn-icon"
              >
                <span
                  class="amelipro-external-icon"
                  style="background-color: transparent; border-radius: 50%; color: #00749C; padding: 0px; height: 1.5rem; width: 1.5rem;"
                >
                  <i
                    aria-hidden="true"
                    class="
                      M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
                      mdi
                      notranslate
                      text-ap-blue-darken-1
                      v-icon
                      v-theme--light
                    "
                    style="font-size: 100%; height: 100%; width: 100%; display: block;"
                  ></i>
                </span>
              </span>
              <!-- v-if -->
            </span>
          </span>
          <!---->
          <!---->
        </button>
      </div>
      <p
        class="
          amelipro-patient-banner__patient-info__doctor
          font-weight-bold
          mb-0
          text-ap-blue-darken-1
        "
        id="my-patient-banner-id-patient-doctor-infos"
      >
        Vous êtes le médecin traitant
      </p>
    </div>
    <hr class="patient-banner__separator" />
    <div
      class="
        align-center
        d-flex
        justify-space-between
        patient-banner-main
      "
      id="my-patient-banner-id-main-content"
    >
      <div class="
        d-flex
        flex-column
        flex-sm-row
      ">
        <div class="mr-16">
          <p
            class="
              font-weight-regular
              mb-4
              text-h5
            "
            id="my-patient-banner-id-patient-status"
          >
            Statut :
            <span class="font-weight-bold">
              Assuré(e)
            </span>
          </p>
          <p
            class="
              font-weight-regular
              mb-4
              mb-md-0
            "
            id="my-patient-banner-id-patient-number"
          >
            NIR :
            <span class="font-weight-bold">
              NIR patient
            </span>
          </p>
        </div>
        <div class="mr-3">
          <p
            class="
              font-weight-bold
              mb-4
            "
            id="my-patient-banner-id-patient-system"
          >
            Régime Général
          </p>
          <p
            class="
              font-weight-bold
              mb-4
              mb-md-0
            "
            id="my-patient-banner-id-patient-organism"
          >
            CPAM des Alpes de Haute Provence - Centre 103
          </p>
        </div>
      </div>
      <a
        class="
          amelipro-btn
          amelipro-btn--style
          bg-ap-white
          elevation-0
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-flat
          v-theme--light
        "
        href="#"
        id="my-patient-banner-id-more-info-btn"
        style="height: auto; min-height: 2.5rem; color: #00749C !important; border: 2px solid #00749C !important; background-color: white;"
        type="button"
      ><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        
      <!----><span
        class="v-btn__content"
        data-no-activator=""
      ><span class="
        align-center
        amelipro-custom-btn
        d-flex
        flex-row
      ">Plus d’informations
      <!-- v-if -->
      <!-- v-if --></span></span>
        
      <!---->
        
      <!---->
      </a>
    </div>
  </div>
</div>
`;
